RESOLVED FIXED119069
Crash when calling WKPageGetProcessIdentifier after aborted process launch
https://bugs.webkit.org/show_bug.cgi?id=119069
Summary Crash when calling WKPageGetProcessIdentifier after aborted process launch
Anders Carlsson
Reported 2013-07-24 17:20:55 PDT
Crash when calling WKPageGetProcessIdentifier after aborted process launch
Attachments
Patch (9.91 KB, patch)
2013-07-24 17:26 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-07-24 17:26:48 PDT
Andreas Kling
Comment 2 2013-07-24 17:35:38 PDT
Comment on attachment 207424 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207424&action=review r=me, nice. > Tools/TestWebKitAPI/Tests/WebKit2/mac/GetPIDAfterAbortedProcessLaunch.cpp:2 > + * Copyright (C) 2011 Apple Inc. All rights reserved. Anders "2011" Carlsson
Anders Carlsson
Comment 3 2013-07-24 17:57:09 PDT
Note You need to log in before you can comment on or make changes to this bug.